--- a/package.json
+++ b/package.json
@@ -11,10 +11,14 @@
   "dependencies": {
     "axios": "^0.27.2",
     "core-js": "^3.8.3",
+    "element-china-area-data": "^5.0.2",
     "element-ui": "^2.3.6",
     "jsencrypt": "^3.2.1",
+    "node-sass": "^7.0.1",
+    "sass-loader": "^13.0.0",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1",
+    "vue-socket.io": "^3.0.10",
     "vuex": "^3.6.2"
   },
   "devDependencies": {
@@ -32,9 +36,22 @@
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
     "jest": "^27.0.5",
-    "sass": "^1.32.7",
-    "sass-loader": "^12.0.0",
     "vue-cli-plugin-element-ui": "~1.1.4",
     "vue-template-compiler": "^2.6.14"
-  }
+  },
+  "description": "## Project setup ``` npm install ```",
+  "main": ".eslintrc.js",
+  "directories": {
+    "test": "tests"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/DmmnYyds/exam-vue.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/DmmnYyds/exam-vue/issues"
+  },
+  "homepage": "https://github.com/DmmnYyds/exam-vue#readme"
 }
